--- a/src/css-components/Data.css
+++ b/src/css-components/Data.css
@@ -16,6 +16,7 @@ input {
     outline: none;
     font-size: 25px;
     font-weight: 600;
+    color: white;
 }
 
 .glow-on-hover {
@@ -23,7 +24,7 @@ input {
     height: 50px;
     border: none;
     outline: none;
-    color: #fff;
+    color: white;
     background: #111;
     cursor: pointer;
     position: relative;
@@ -33,7 +34,7 @@ input {
 
 .glow-on-hover:before {
     content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    background: linear-gradient(45deg, #ff00005e, #ff73002f, #fffb0036, #48ff00, #00ffd531, #002bff, #7a00ff, #ff00c8, #ff000034);
     position: absolute;
     top: -2px;
     left: -2px;
@@ -43,7 +44,7 @@ input {
     width: calc(100% + 4px);
     height: calc(100% + 4px);
     animation: glowing 20s linear infinite;
-    opacity: 0;
+    opacity: 0; 
     transition: opacity .3s ease-in-out;
     border-radius: 10px;
 }
@@ -66,7 +67,7 @@ input {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #111;
+    background:#4d4341;
     left: 0;
     top: 0;
     border-radius: 10px;
@@ -93,7 +94,10 @@ input {
     width: 70%;
     margin: 0px auto;
     padding: 30px;
+    color: white;
 }
+
+
 
 .wrapper {
     display: flex;
