--- a/src/css-components/LandinPage.css
+++ b/src/css-components/LandinPage.css
@@ -6,7 +6,8 @@ html {
 
 body {
     background: -webkit-linear-gradient(#ebece7, #fff);
-    background: linear-gradient(#ebece7, rgb(150, 105, 105));
+    background: linear-gradient(#ebece7, #381c0b);
+    margin: 0;
     margin: 0;
     width: 100%;
     height: 100%;
@@ -33,10 +34,14 @@ body {
     text-align: center;
     line-height: 90px;
     letter-spacing: -8px;
+    filter: drop-shadow(2px 4px 2px black);
+
+
 }
 
-.title>p{
+.title>p {
     margin: 0;
+
 }
 
 .subtitle {
@@ -51,6 +56,7 @@ body {
     width: 76%;
     margin: auto;
 }
+
 a {
     text-decoration: none;
     color: black;
