--- a/src/css-components/ZodiacTwins.css
+++ b/src/css-components/ZodiacTwins.css
@@ -3,6 +3,13 @@
     height: 100px;
 }
 
-.zodiac-stars{
-    border: 1px solid black;
+.logo{
+    width: 60px;
+    height: 50px;  
+}
+
+.main-heading{
+    display: flex;
+    justify-content: center;
+    
 }
