--- a/src/css-components/ZodiacBook.css
+++ b/src/css-components/ZodiacBook.css
@@ -1,29 +1,90 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .ZodiacBook {
-    display: inline-block;
-    height: fit-content;
-    width: 200px;
-    margin: 1em;
-    padding: 1em;
-    border-radius: 10px;
+    perspective: 1000px;
+    width: 18%;
+    margin: 2em;
+    text-decoration: none;
 }
 
-.ZodiacBook:hover {
-    background-color: rgb(204, 241, 229);
+.ZodiacBook p, h3 {
+    line-height: 1.5;
 }
 
-.ZodiacBook img {
-    width: 100%;
-    /* height: auto; */
+.ZodiacBook figure {
     margin: 0;
-
+    width: 100%;
+    height: 15.5vw;
+    background-size: 100% 100%;
+    transform-origin: center bottom;
+    transform-style: preserve-3d;
+    transition: 1s transform;
+    border-radius: 6px;
 }
 
-.ZodiacBook figcaption {
-    margin-top: 0;
-    color: aliceblue
+.ZodiacBook figure figcaption {
+    width: 100%;
+    background-size: 100%;
+    height: 80px;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    color: #fff;
+    position: relative;
+    top: 15.5vw;
+    transform-origin: center top;
+    transform: rotateX(-89.9deg);
+    font-size: 1.5em;
+    font-family: Montserrat, Arial, sans-serif;
+    text-align: center;
+    line-height: 3;
+}
+
+.ZodiacBook figure:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 100px 50px rgba(0, 0, 0, 0.1), inset 0 0 250px 250px rgba(0, 0, 0, 0.1);
+    transition: 1s;
+    transform: rotateX(95deg) translateZ(-80px) scale(0.75);
+    transform-origin: inherit;
+}
+
+.ZodiacBook:hover figure {
+    transform: rotateX(75deg) translateZ(5vw);
+}
+
+.ZodiacBook:hover figure:before {
+    box-shadow: 0 0 25px 25px rgba(0, 0, 0, 0.5), inset 0 0 250px 250px rgba(0, 0, 0, 0.5);
+    transform: rotateX(-5deg) translateZ(-80px) scale(1);
+}
+
+@media screen and (max-width: 800px) {
+    .ZodiacBook {
+        width: 40%;
+    }
+    .ZodiacBook figure {
+        height: 34.5vw;
+    }
+    .ZodiacBook figure figcaption {
+        top: 34.5vw;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .ZodiacBook {
+        width: 60%;
+    }
+    .ZodiacBook figure {
+        height: 52vw;
+    }
+    .ZodiacBook figure figcaption {
+        top: 52vw;
+    }
 }
