--- a/src/css-components/ZodiacSigns.css
+++ b/src/css-components/ZodiacSigns.css
@@ -1,12 +1,18 @@
-.Zodiac-Sign{
+.Zodiac-wrapper{
     height: 100%;
     background-image: url(https://images.unsplash.com/photo-1517487728715-4713140dcac0?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
     background-repeat-x: no-repeat;
     background-position: inherit;
     background-size: contain;
-    padding: 50px;
     
 }
 .Zodiac-Sign div:nth-child(even){
     flex-direction: row-reverse;
+}
+@media (max-width: 800px) {
+    .Zodiac-Sign div:nth-child(even) {
+        flex-direction: column;
+        text-align: center;
+    }
+    
 }
