--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#hackbit-vote-widget{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
