--- a/src/css-components/ZodiacTwins.css
+++ b/src/css-components/ZodiacTwins.css
@@ -1,31 +1,36 @@
-/* .celebs {
-    width: 100px;
-    height: 100px;
-} */
-
 .logo {
-    width: 60px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
 }
 
-/* .main-heading{
+.heading {
+    text-align: center;
+    color: white;
+}
+
+.set {
     display: flex;
     justify-content: center;
-} */
+}
+
+.date {
+    font-size: 18px;
+    text-align: center;
+    color: white;
+}
 
 .body {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
+    display: inline-flex;
+    justify-content: cent0ner;
     align-items: center;
-    min-height: 100vh;
-    /* background: #212121; */
+    /* min-height: 100vh;  */
     font-family: sans-serif;
 }
 
 .box {
-    width: 1200px;
+    /* width: 1200px;  */
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 15px;
@@ -34,8 +39,8 @@
 
 .card {
     position: relative;
-    width: 300px;
-    height: 350px;
+    width: 250px;
+    height: 300px;
     background: #fff;
     margin: 0 auto;
     border-radius: 4px;
