--- a/src/css-components/ZodiacTwins.css
+++ b/src/css-components/ZodiacTwins.css
@@ -1,6 +1,7 @@
 .logo {
     width: 80px;
     height: 80px;
+    filter: invert(1)
 }
 
 .heading {
@@ -11,6 +12,7 @@
 .set {
     display: flex;
     justify-content: center;
+    margin: 0.5em;
 }
 
 .date {
