--- a/src/css-components/ZodiacTwins.css
+++ b/src/css-components/ZodiacTwins.css
@@ -3,9 +3,9 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: url('back.jpg');
-    background-repeat: no-repeat;
+    background: url(https://www.setaswall.com/wp-content/uploads/2019/03/Space-Fragments-Universe-Wallpaper-1440x3040-380x802.jpg);
     background-size: 100% 100%;
+    height: 100%;
 }
 
 code {
@@ -71,7 +71,7 @@ code {
     width: 100%;
     height: 100%;
     border-radius: 4px;
-    background: #fff;
+    background: rgb(255, 251, 251);
     transition: 0.5s;
     z-index: -1;
 }
