--- a/src/css-components/Data.css
+++ b/src/css-components/Data.css
@@ -1,3 +1,6 @@
+
+    @import url('https://fonts.googleapis.com/css?family=Signika+Negative&display=swap');
+
 button {
     margin-top: 15px;
 }
@@ -23,6 +26,7 @@ input {
     position: relative;
     z-index: 0;
     border-radius: 10px;
+    font-size: 1em;
 }
 
 .glow-on-hover:before {
@@ -92,10 +96,12 @@ input {
     word-spacing: 3px;
     background-color: #3e2e2e6b;
     filter: drop-shadow(2px 4px 6px black);
+    font-family: 'Signika Negative', sans-serif;
 }
 h1{
     font-size:3em;
-    margin: 5px;
+    margin: 5px 5px 20px 5px;
+    
 }
 
 .wrapper {
