--- a/src/css-components/LandinPage.css
+++ b/src/css-components/LandinPage.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,,800,900);
-
 html {
     width: 100%;
     height: 100%;
@@ -13,7 +12,7 @@ body {
     width: 100%;
     height: 100%;
     /* font-family: 'Raleway', sans-serif; */
-    background-repeat:no-repeat; 
+    background-repeat: no-repeat;
 }
 
 .Mainpage-container {
@@ -43,7 +42,6 @@ body {
     margin: 0;
 }
 
-
 .subtitle {
     display: block;
     text-align: center;
@@ -61,4 +59,15 @@ body {
 a {
     text-decoration: none;
     color: black;
+}
+
+@media (max-width: 700px) {
+    .title {
+        font-size: 85px;
+    }
+}
+@media (max-width: 500px) {
+    .title {
+        font-size: 80px;
+    }
 }
