--- a/src/css-components/ZodiacTwins.css
+++ b/src/css-components/ZodiacTwins.css
@@ -1,13 +1,12 @@
-.container {
-    margin: 0;
+body {
+    background-image: url(https://www.setaswall.com/wp-content/uploads/2019/03/Space-Fragments-Universe-Wallpaper-1440x3040-380x802.jpg);
+    margin: 0em;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: url(https://www.setaswall.com/wp-content/uploads/2019/03/Space-Fragments-Universe-Wallpaper-1440x3040-380x802.jpg);
     background-size: 100% 100%;
     height: 100%;
 }
-
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
@@ -27,7 +26,7 @@ code {
 .set {
     display: flex;
     justify-content: center;
-    margin: 0.5em;
+    margin: 1em;
 }
 
 .date {
@@ -43,12 +42,13 @@ code {
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
+    margin-bottom:100px;
 }
 
 .box {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 15px;
+    grid-gap: 30px;
     margin: 0 auto;
 }
 
@@ -70,7 +70,7 @@ code {
     width: 100%;
     height: 100%;
     border-radius: 4px;
-    background: rgb(255, 251, 251);
+    background: #fff;
     transition: 0.5s;
     z-index: -1;
 }
